# firefly-iii-credit-agricole-importer

./: .gitignore  CHANGELOG.rst  LICENSE.rst  README.md  README.rst  setup.cfg
files/: rules-example.ini
src/bank/: _paths.py  _utils.py  firefly.py  rules.py
src/bank/_cli/: list_transactions.py  update.py  update_ca.py  update_transactions.py  update_transactions_ca.py
src/bank/accessors/: ca.py
