[metadata]
name = bank
version = attr: bank.VERSION
description = Collection of functions and executables related to my bank accounts.
long_description = file: README.md, CHANGELOG.rst, LICENSE.rst
keywords = bank, management, firefly, credit, agricole
license = 
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX
    
[options]
include_package_data = True
packages = find:
package_dir=
    =src
install_requires =
    creditagricole_particuliers == 0.7.0
    rule-engine == 3.3.1
    requests
    colorama
    
[options.entry_points]
console_scripts =
    firefly_update_ca = bank._cli.update_ca:main
    firefly_update_transaction = bank._cli.update_transactions:main
    firefly_list_transactions = bank._cli.list_transactions:main
    
[options.extras_require]
dev =
    black
    ipython
    
[options.packages.find]
where=src
